backend/demo/src/main/java/com/example/demo/error/IdBlankException.java
package com.example.demo.error;

public class IdBlankException extends RuntimeException 
{
	public IdBlankException(String message) 
	{
		super(message);
	}
	
}
